--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,10 @@ keywords = ["serde", "utilities"]
 license = "MIT/Apache-2.0"
 
 [dependencies]
+chrono = { version = "0.4.2", features = [ "serde" ], optional = true }
+serde = "1.0.59"
+
+[dev-dependencies]
+serde_derive = "1.0.59"
+serde_json = "1.0.17"
+pretty_assertions = "0.5.1"
