--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,14 @@ readme = "README.md"
 keywords = ["serde", "utilities", "serialization", "deserialization"]
 license = "MIT/Apache-2.0"
 
-exclude = [".gitignore", ".travis.yml", "bors.toml", "README.tpl", "rustfmt.toml"]
+exclude = [
+    ".codecov.yml",
+    ".gitignore",
+    ".travis.yml",
+    "bors.toml",
+    "README.tpl",
+    "rustfmt.toml",
+]
 
 [badges]
 travis-ci = { repository = "jonasbb/serde_with", branch = "master" }
@@ -25,9 +32,9 @@ serde = "1.0.75"
 serde_json = { version = "1.0.1", optional = true }
 
 [dev-dependencies]
+ron = ">=0.3.0,<0.6"
 serde_derive = "1.0.75"
 serde_json = "1.0.1"
-ron = ">=0.3.0,<0.6"
 pretty_assertions = "0.5.1"
 
 [package.metadata.docs.rs]
