--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,10 +32,12 @@ serde = "1.0.75"
 serde_json = { version = "1.0.1", optional = true }
 
 [dev-dependencies]
+fnv = "1.0.6"
+pretty_assertions = "0.5.1"
 ron = ">=0.3.0,<0.6"
 serde_derive = "1.0.75"
 serde_json = "1.0.1"
-pretty_assertions = "0.5.1"
+version-sync = "0.7.0"
 
 [package.metadata.docs.rs]
 all-features = true
