--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ license = "MIT/Apache-2.0"
 exclude = [
     ".codecov.yml",
     ".gitignore",
+    ".pre-commit-config.yaml",
     ".travis.yml",
     "bors.toml",
     "README.tpl",
