Add a proc_macro component to serde_with
A proc_macro is required to implement skip_serializing_null from
https://github.com/dtolnay/request-for-implementation/issues/18

Expose the macro crate in serde_with

* Add a "macros"-feature to disable compiling proc_macros
* Add the feature to the testing matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -70,7 +70,7 @@ before_script:
 script:
   - set -e
   - |
-    for FEATURES_COMMAND in "--no-default-features" "" "--features=chrono" "--features=json" "--all-features"
+    for FEATURES_COMMAND in "--no-default-features" "" "--features=chrono" "--features=json" "--features=macros" "--all-features"
     do
       cargo build --verbose --all ${FEATURES_COMMAND}
       # skip this step if clippy is not available, e.g., bad nightly
