--- a/serde_with_macros/Cargo.toml
+++ b/serde_with_macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "serde_with_macros"
-version = "0.1.0"
+version = "1.0.0"
 authors = ["jonasbb"]
 
 description = "proc-macro library for serde_with"
@@ -19,3 +19,25 @@ codecov = { repository = "jonasbb/serde_with", branch = "master", service = "git
 maintenance = { status = "actively-developed" }
 
 [dependencies]
+proc-macro2 = { version = "0.4.27" }
+quote = "0.6.11"
+
+[dependencies.syn]
+version = "0.15.29"
+default-features = false
+features = [
+    "extra-traits", # Only for debugging
+    "full",
+    "parsing",
+    "printing",
+    "proc-macro",
+]
+
+[dev-dependencies]
+pretty_assertions = "0.5.1"
+serde = { version = "1.0.75", features = [ "derive" ] }
+serde_json = "1.0.25"
+version-sync = "0.7.0"
+
+[package.metadata.docs.rs]
+all-features = true
