Add compile tests to check the error messages created by the macros
Use trybuild as an improvement over compiletest as the test framework
for the UI tests.
Older Rust versions (<1.35.0) have different error messages, so the new
UI tests fail on them, therefore gate them on the Rust version.

Closes #50

--- a/serde_with_macros/Cargo.toml
+++ b/serde_with_macros/Cargo.toml
@@ -31,8 +31,10 @@ features = [
 
 [dev-dependencies]
 pretty_assertions = "0.5.1"
+rustc_version = "0.2.3"
 serde = { version = "1.0.75", features = [ "derive" ] }
 serde_json = "1.0.25"
+trybuild = "1.0.4"
 version-sync = "0.7.0"
 
 [package.metadata.docs.rs]
