Fix missing features for syn dependency

--- a/serde_with_macros/Cargo.toml
+++ b/serde_with_macros/Cargo.toml
@@ -24,13 +24,9 @@ quote = "0.6.11"
 
 [dependencies.syn]
 version = "0.15.29"
-default-features = false
 features = [
-    "extra-traits", # Only for debugging
+    # "extra-traits", # Only for debugging
     "full",
-    "parsing",
-    "printing",
-    "proc-macro",
 ]
 
 [dev-dependencies]
