--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ documentation = "https://docs.rs/serde_with/"
 repository = "https://github.com/jonasbb/serde_with"
 readme = "README.md"
 keywords = ["serde", "utilities", "serialization", "deserialization"]
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 
 exclude = [
     ".codecov.yml",
