--- a/serde_with_macros/Cargo.toml
+++ b/serde_with_macros/Cargo.toml
@@ -8,7 +8,7 @@ documentation = "https://docs.rs/serde_with_macros/"
 repository = "https://github.com/jonasbb/serde_with/serde_with_macros"
 readme = "README.md"
 keywords = ["serde", "utilities", "serialization", "deserialization"]
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 
 [lib]
 proc-macro = true
