--- a/serde_with_macros/Cargo.toml
+++ b/serde_with_macros/Cargo.toml
@@ -19,11 +19,11 @@ codecov = { repository = "jonasbb/serde_with", branch = "master", service = "git
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-proc-macro2 = { version = "0.4.27" }
-quote = "0.6.11"
+proc-macro2 = "1.0.1"
+quote = "1.0.0"
 
 [dependencies.syn]
-version = "0.15.29"
+version = "1.0.0"
 features = [
     # "extra-traits", # Only for debugging
     "full",
