Properly ignore the compile_test for old rustc versions and tarpaulin
Both older rustc versions (<1.35) and tarpaulin have problem running the
trybuild compile tests. Ignoring the test fixes the problem in both
configurations.

--- a/.travis.yml
+++ b/.travis.yml
@@ -91,6 +91,7 @@ after_success:
   - |
     if [[ "$TRAVIS_RUST_VERSION" == stable ]] || [[ "$TRAVIS_RUST_VERSION" == nightly ]]
     then
+      export TARPAULIN=1
       cargo tarpaulin --out Xml --all --all-features
       bash <(curl -s https://codecov.io/bash)
       echo "CodeCov Uploading of data was successful!"
