--- a/serde_with_macros/Cargo.toml
+++ b/serde_with_macros/Cargo.toml
@@ -31,7 +31,7 @@ features = [
 
 [dev-dependencies]
 pretty_assertions = "0.5.1"
-rustc_version = "0.2.3"
+rustversion = "0.1.4"
 serde = { version = "1.0.75", features = [ "derive" ] }
 serde_json = "1.0.25"
 trybuild = "1.0.4"
