Cleanup some oversights left in the last release
* Switch the badges to Github Actions instead of Travis.
* Remove link for proc-macro documentation, since doc reexport works now.
* Add version number to changelog title.
* Ignore the .github folder for crates archive.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ license = "MIT OR Apache-2.0"
 
 exclude = [
     ".codecov.yml",
+    ".github",
     ".gitignore",
     ".pre-commit-config.yaml",
     ".travis.yml",
@@ -26,7 +27,7 @@ exclude = [
 ]
 
 [badges]
-travis-ci = { repository = "jonasbb/serde_with", branch = "master" }
+# github-actions = { repository = "jonasbb/serde_with", workflow = "Rust CI" }
 codecov = { repository = "jonasbb/serde_with", branch = "master", service = "github" }
 maintenance = { status = "actively-developed" }
 
