--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ chrono = [ "chrono_crate" ]
 default = [ "macros" ]
 json = [ "serde_json" ]
 macros = [ "serde_with_macros" ]
+serde-as = []
 
 [dependencies]
 chrono_crate = { package = "chrono", version = "0.4.1", features = [ "serde" ], optional = true }
