--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ serde-as = []
 
 [dependencies]
 chrono_crate = { package = "chrono", version = "0.4.1", features = [ "serde" ], optional = true }
+hex = { version = "0.4.2", optional = true }
 serde = "1.0.75"
 serde_json = { version = "1.0.1", optional = true }
 serde_with_macros = { path = "./serde_with_macros", version = "1.1.0", optional = true}
