--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,15 +36,17 @@ maintenance = { status = "actively-developed" }
 [features]
 chrono = [ "chrono_crate" ]
 default = [ "macros" ]
+guide = [ "doc-comment" ]
 json = [ "serde_json" ]
 macros = [ "serde_with_macros" ]
 
 [dependencies]
 chrono_crate = { package = "chrono", version = "0.4.1", features = [ "serde" ], optional = true }
+doc-comment = { version = "0.3.3", optional = true }
 hex = { version = "0.4.2", optional = true }
 serde = "1.0.75"
 serde_json = { version = "1.0.1", optional = true }
-serde_with_macros = { path = "./serde_with_macros", version = "1.1.0", optional = true}
+serde_with_macros = { path = "./serde_with_macros", version = "1.1.0", optional = true }
 
 [dev-dependencies]
 fnv = "1.0.6"
