--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,17 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.1.0
-    hooks:
-    -   id: trailing-whitespace
-        args: [--markdown-linebreak-ext=md]
-    -   id: no-commit-to-branch
-        args: [--branch, staging, --branch, master]
+    - repo: https://github.com/pre-commit/pre-commit-hooks
+      rev: v3.1.0
+      hooks:
+          - id: trailing-whitespace
+            args: [--markdown-linebreak-ext=md]
+          - id: no-commit-to-branch
+            args: [--branch, staging, --branch, master]
 
+    - repo: local
+      hooks:
+          - id: rustfmt
+            name: rustfmt
+            description: Check if all files follow the rustfmt style
+            entry: cargo +nightly fmt --all -- --check --color always
+            language: system
+            pass_filenames: false
