--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,4 +6,11 @@ updates:
     interval: weekly
     day: saturday
     time: '01:00'
-  open-pull-requests-limit: 20
+  open-pull-requests-limit: 10
+- package-ecosystem: github-actions
+  directory: "/"
+  schedule:
+    interval: weekly
+    day: saturday
+    time: '01:00'
+  open-pull-requests-limit: 10
