--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,7 @@ fnv = "1.0.6"
 pretty_assertions = "0.6.1"
 ron = ">=0.3.0, <0.6"
 serde_derive = "1.0.75"
-serde_json = "1.0.25"
+serde_json = { version = "1.0.25", features = [ "preserve_order" ] }
 version-sync = "0.8.1"
 
 [package.metadata.docs.rs]
