Explicitly test the expansion of the proc-macros
This makes the proc-macros better testable, as now the ouput of them can be compared.
This is in addition to the functional tests already existing.

--- a/serde_with_macros/Cargo.toml
+++ b/serde_with_macros/Cargo.toml
@@ -34,6 +34,7 @@ features = [
 ]
 
 [dev-dependencies]
+macrotest = "1.0.2"
 pretty_assertions = "0.6.1"
 rustversion = "1.0.0"
 serde = { version = "1.0.75", features = [ "derive" ] }
