--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,9 +3,9 @@ on:
   pull_request:
   push:
     branches:
-    - master
-    - staging
-    - trying
+      - master
+      - staging
+      - trying
 
 env:
   CARGO_INCREMENTAL: 0
@@ -97,7 +97,18 @@ jobs:
         with:
           profile: minimal
           toolchain: ${{ matrix.rust }}
+          components: rustfmt
           override: true
+      - uses: actions-rs/install@v0.1
+        with:
+          crate: cargo-expand
+          version: latest
+        if: matrix.rust == 'nightly'
+
+      - uses: actions-rs/install@v0.1
+        with:
+          crate: cargo-audit
+          version: latest
       - uses: actions-rs/cargo@v1
         name: Build (${{ matrix.os }} / ${{ matrix.rust }})
         with:
