--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,14 +15,8 @@ jobs:
   clippy_check:
     strategy:
       matrix:
-        os: [
-          "ubuntu-latest",
-          "windows-latest",
-        ]
-        rust: [
-          "stable",
-          "nightly",
-        ]
+        os: ["ubuntu-latest", "windows-latest"]
+        rust: ["stable", "nightly"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2.3.1
@@ -74,22 +68,11 @@ jobs:
 
   build_and_test:
     name: Build and Test
-    needs: [
-      "rustfmt",
-      "clippy_check",
-    ]
+    needs: ["rustfmt", "clippy_check"]
     strategy:
       matrix:
-        os: [
-          "ubuntu-latest",
-          "windows-latest",
-        ]
-        rust: [
-          "1.36.0",
-          "stable",
-          "beta",
-          "nightly",
-        ]
+        os: ["ubuntu-latest", "windows-latest"]
+        rust: ["1.36.0", "stable", "beta", "nightly"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2.3.1
@@ -105,10 +88,6 @@ jobs:
           version: latest
         if: matrix.rust == 'nightly'
 
-      - uses: actions-rs/install@v0.1
-        with:
-          crate: cargo-audit
-          version: latest
       - uses: actions-rs/cargo@v1
         name: Build (${{ matrix.os }} / ${{ matrix.rust }})
         with:
