--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = [
 
 [package]
 name = "serde_with"
-version = "1.4.0"
+version = "1.5.0-alpha.1"
 authors = ["jonasbb"]
 
 categories = ["encoding"]
@@ -48,7 +48,7 @@ doc-comment = { version = "0.3.3", optional = true }
 hex = { version = "0.4.2", optional = true }
 serde = "1.0.75"
 serde_json = { version = "1.0.1", optional = true }
-serde_with_macros = { path = "./serde_with_macros", version = "1.1.0", optional = true }
+serde_with_macros = { path = "./serde_with_macros", version = "1.2.0-alpha.1", optional = true }
 
 [dev-dependencies]
 fnv = "1.0.6"
