--- a/serde_with_macros/Cargo.toml
+++ b/serde_with_macros/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "serde_with_macros"
-version = "1.1.0"
+version = "1.2.0-alpha.1"
 authors = ["jonasbb"]
 
 categories = ["encoding"]
