--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,8 +52,10 @@ serde_with_macros = { path = "./serde_with_macros", version = "1.2.0-alpha.2", o
 
 [dev-dependencies]
 fnv = "1.0.6"
+glob = "0.3.0"
 mime = "0.3.16"
 pretty_assertions = "0.6.1"
+regex = { version = "1.3.9", default-features = false, features=["std"] }
 ron = "0.6"
 rustversion = "1.0.0"
 serde_derive = "1.0.75"
