--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ macros = [ "serde_with_macros" ]
 
 # When adding new optional dependencies update the documentation in feature-flags.md
 [dependencies]
-chrono_crate = { package = "chrono", version = "0.4.1", features = [ "serde" ], optional = true }
+chrono_crate = { package = "chrono", version = "0.4.1", optional = true }
 doc-comment = { version = "0.3.3", optional = true }
 hex = { version = "0.4.2", optional = true }
 serde = "1.0.75"
