--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ serde_json = { version = "1.0.1", optional = true }
 serde_with_macros = { path = "./serde_with_macros", version = "1.2.0-alpha.3", optional = true }
 
 [dev-dependencies]
+expect-test = "1.0.0"
 fnv = "1.0.6"
 glob = "0.3.0"
 mime = "0.3.16"
