--- a/.github/workflows/audit.yaml
+++ b/.github/workflows/audit.yaml
@@ -1,5 +1,9 @@
 name: Security audit
 on:
+  pull_request:
+    paths:
+      - Cargo.toml'
+      - '**/Cargo.toml'
   push:
     paths:
       - 'Cargo.toml'
@@ -8,6 +12,7 @@ on:
     - cron: '0 0 * * *'
 jobs:
   security_audit:
+    name: Rustsec Audit
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.3.2
