Spellcheck Rust files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,38 @@
 {
     "cSpell.words": [
+        "Challonge",
         "Deque",
         "Deserialization",
         "Deserializes",
         "NANOS",
+        "accu",
         "btreemap",
+        "btreeset",
         "chrono",
         "clippy",
         "codecov",
         "concat",
         "datatypes",
         "datetime",
+        "deps",
+        "elems",
         "fromstr",
         "hasher",
+        "hashset",
+        "impls",
+        "linkedlist",
+        "newtype",
+        "nsecs",
+        "rustversion",
         "serde's",
         "structs",
         "subsec",
+        "subseclen",
         "subsecond",
         "subseconds",
-        "subsecs"
+        "subsecs",
+        "systemtime",
+        "trybuild",
+        "vecdeque"
     ]
 }
