--- a/serde_with_macros/Cargo.toml
+++ b/serde_with_macros/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
+authors = ["Jonas Bushart"]
 name = "serde_with_macros"
 version = "1.2.0-alpha.3"
-authors = ["jonasbb"]
 
 categories = ["encoding"]
 description = "proc-macro library for serde_with"
@@ -12,13 +12,13 @@ license = "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/jonasbb/serde_with/tree/master/serde_with_macros"
 
+include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]
+
 [lib]
 proc-macro = true
 
 [badges]
-# github-actions = { repository = "jonasbb/serde_with", workflow = "Rust CI" }
-codecov = { repository = "jonasbb/serde_with", branch = "master", service = "github" }
-maintenance = { status = "actively-developed" }
+maintenance = {status = "actively-developed"}
 
 [dependencies]
 darling = "0.10.2"
@@ -26,17 +26,17 @@ proc-macro2 = "1.0.1"
 quote = "1.0.0"
 
 [dependencies.syn]
-version = "1.0.3"
 features = [
     # "extra-traits", # Only for debugging
     "full",
     "parsing",
 ]
+version = "1.0.3"
 
 [dev-dependencies]
 pretty_assertions = "0.6.1"
 rustversion = "1.0.0"
-serde = { version = "1.0.75", features = [ "derive" ] }
+serde = {version = "1.0.75", features = ["derive"]}
 serde_json = "1.0.25"
 trybuild = "1.0.14"
 version-sync = "0.8.1"
