--- a/serde_with_macros/Cargo.toml
+++ b/serde_with_macros/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Jonas Bushart"]
 name = "serde_with_macros"
-version = "1.2.0-alpha.3"
+version = "1.2.0"
 
 categories = ["encoding"]
 description = "proc-macro library for serde_with"
