--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ macros = ["serde_with_macros"]
 chrono_crate = {package = "chrono", version = "0.4.1", features = ["serde"], optional = true}
 doc-comment = {version = "0.3.3", optional = true}
 hex = {version = "0.4.2", optional = true}
-serde = "1.0.75"
+serde = {version = "1.0.75", features = ["derive"]}
 serde_json = {version = "1.0.1", optional = true}
 serde_with_macros = {path = "./serde_with_macros", version = "1.2.0", optional = true}
 
