Fix typo in audit.yaml
bors r+

--- a/.github/workflows/audit.yaml
+++ b/.github/workflows/audit.yaml
@@ -2,7 +2,7 @@ name: Security audit
 on:
   pull_request:
     paths:
-      - Cargo.toml'
+      - 'Cargo.toml'
       - '**/Cargo.toml'
   # Bors related branches
   push:
