--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ pretty_assertions = "0.6.1"
 regex = {version = "1.3.9", default-features = false, features = ["std"]}
 ron = "0.6"
 rustversion = "1.0.0"
+serde-xml-rs = "0.4.1"
 serde_derive = "1.0.75"
 serde_json = {version = "1.0.25", features = ["preserve_order"]}
 version-sync = "0.9.1"
