--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,1 +1,6 @@
-merge_imports = true
+# https://github.com/rust-lang/rustfmt/blob/master/Configurations.md
+
+# format_code_in_doc_comments = true
+# format_strings = true
+imports_granularity = "Module"
+use_field_init_shorthand = true
