Better acknowledge Marcin Kaźmierczak as co-author
Marcin Kaźmierczak (@markazmierczak) devised the `SerializeAs` and `DeserializeAs` traits.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,11 @@ members = [
 ]
 
 [package]
-authors = ["Jonas Bushart"]
+authors = [
+    "Jonas Bushart",
+    # For creation of the SerializeAs and DeserializeAs traits.
+    "Marcin Kaźmierczak",
+]
 name = "serde_with"
 version = "1.6.4"
 
