Update derive macro tests
Merge them into a single integration test.
Gate the integration test on the `macros` feature.
Use the test functions from utils.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,5 +79,10 @@ name = "serde_as"
 path = "tests/serde_as/lib.rs"
 required-features = ["macros"]
 
+[[test]]
+name = "derives"
+path = "tests/derives/lib.rs"
+required-features = ["macros"]
+
 [package.metadata.docs.rs]
 all-features = true
