--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,96 +1,6 @@
 [workspace]
 members = [
+    "serde_with",
     "serde_with_macros",
     "serde_with_test",
 ]
-
-[package]
-authors = [
-    "Jonas Bushart",
-    # For creation of the SerializeAs and DeserializeAs traits.
-    "Marcin Kaźmierczak",
-]
-name = "serde_with"
-version = "1.10.0"
-
-categories = ["encoding"]
-description = "Custom de/serialization functions for Rust's serde"
-documentation = "https://docs.rs/serde_with/"
-edition = "2018"
-keywords = ["serde", "utilities", "serialization", "deserialization"]
-license = "MIT OR Apache-2.0"
-readme = "README.md"
-repository = "https://github.com/jonasbb/serde_with"
-
-include = ["src/**/*", "LICENSE-*", "README.*", "CHANGELOG.md"]
-
-[badges]
-maintenance = {status = "actively-developed"}
-
-# When adding new features update the documentation in feature-flags.md
-[features]
-chrono = ["chrono_crate"]
-default = ["macros"]
-guide = ["doc-comment", "macros"]
-json = ["serde_json"]
-macros = ["serde_with_macros"]
-
-# When adding new optional dependencies update the documentation in feature-flags.md
-[dependencies]
-chrono_crate = {package = "chrono", version = "0.4.1", features = ["serde"], optional = true}
-doc-comment = {version = "0.3.3", optional = true}
-hex = {version = "0.4.2", optional = true}
-rustversion = "1.0.0"
-serde = {version = "1.0.122", features = ["derive"]}
-serde_json = {version = "1.0.1", optional = true}
-serde_with_macros = {path = "./serde_with_macros", version = "1.5.0", optional = true}
-
-[dev-dependencies]
-expect-test = "1.0.0"
-fnv = "1.0.6"
-glob = "0.3.0"
-mime = "0.3.16"
-pretty_assertions = "0.7.1"
-regex = {version = "1.3.9", default-features = false, features = ["std"]}
-ron = "0.6"
-serde-xml-rs = "0.5.0"
-serde_derive = "1.0.122"
-serde_json = {version = "1.0.25", features = ["preserve_order"]}
-serde_test = "1.0.124"
-version-sync = "0.9.1"
-
-[[test]]
-name = "chrono"
-path = "tests/chrono.rs"
-required-features = ["chrono", "macros"]
-
-[[test]]
-name = "hex"
-path = "tests/hex.rs"
-required-features = ["hex", "macros"]
-
-[[test]]
-name = "json"
-path = "tests/json.rs"
-required-features = ["json", "macros"]
-
-[[test]]
-name = "serde_as"
-path = "tests/serde_as/lib.rs"
-required-features = ["macros"]
-
-[[test]]
-name = "derives"
-path = "tests/derives/lib.rs"
-required-features = ["macros"]
-
-[package.metadata.docs.rs]
-all-features = true
-rustdoc-args = [
-    # Enable doc_cfg showing the required features.
-    "--cfg=docsrs",
-    # Generate links to definition in rustdoc source code pages
-    # https://github.com/rust-lang/rust/pull/84176
-    "-Zunstable-options", "--generate-link-to-definition"
-]
-
